sandbox/output
GildedRoseTest.java:176: error: cannot find symbol
            .filter(GildedRose.isSulfuras())
                              ^
  symbol:   method isSulfuras()
  location: class GildedRose
1 error
